[package]
name = "strava-auth"
version = "0.3.1"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Strava auth api bindings"
homepage = "https://github.com/sajuthankappan/strava-auth-rs"
repository = "https://github.com/sajuthankappan/strava-auth-rs"
readme = "README.md"
keywords = ["strava"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
surf = "1.0.3"
async-std="1.5.0"
log = "0.4.8"
getset = "0.1.0"
strava-data = "0.3.0"

[dev-dependencies]
env_logger = "0.7.1"
