[package]
name = "strava-auth"
version = "0.4.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Strava auth api bindings"
homepage = "https://github.com/sajuthankappan/strava-auth-rs"
repository = "https://github.com/sajuthankappan/strava-auth-rs"
readme = "README.md"
keywords = ["strava"]
categories = ["api-bindings"]

[dependencies]
getset = "0.1.0"
log = "0.4.8"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
strava-data = "0.4.0"

[dev-dependencies]
env_logger = "0.7.1"
tokio = { version = "0.2.22", features = ["macros"] }